--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,18 @@ build/
 .env.test.local
 .env.production.local
 
+# Ignore .env files in backend and frontend folders
 backend/.env
+backend/.env.local
+backend/.env.development.local
+backend/.env.test.local
+backend/.env.production.local
+
 frontend/.env
+frontend/.env.local
+frontend/.env.development.local
+frontend/.env.test.local
+frontend/.env.production.local
 
 # VSCode
 .vscode/
